# PrivBatch

./: .env.example  .gitignore  README.md  amplify.yml  demo.sh  deploy-agent.bat  deploy-aws.ps1  deploy-sepolia.sh  project.txt  scriptdemo.md  setup-pool.sh  uniswap_docs.txt
agent/: Dockerfile  pyproject.toml  requirements.txt  test_demo.py
agent/privbatch_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/src/: adaptive.py  collector.py  config.py  executor.py  main.py  merkle.py  optimizer.py  signer.py  types.py
agent/tests/: test_executor.py  test_merkle.py  test_optimizer.py  test_signer.py
broadcast/DeployAll.s.sol/11155111/: run-latest.json
broadcast/DeployTokensAndPool.s.sol/11155111/: run-latest.json
frontend/: next.config.mjs  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  build-manifest.json  react-loadable-manifest.json
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/public/: docs.md
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: Navbar.tsx  (+1 more)
script/: 00_DeployHook.s.sol  DeployAll.s.sol  DeployTokensAndPool.s.sol
src/: BatchExecutor.sol  CommitContract.sol  PrivBatchHook.sol
src/libraries/: BatchMerkle.sol  IntentVerifier.sol
src/types/: LPIntent.sol
test/: BatchExecutor.t.sol  BatchMerkle.t.sol  CommitContract.t.sol  Integration.t.sol  IntentVerifier.t.sol  PrivBatchHook.t.sol
(+251 files in other folders)
