[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privbatch-agent"
version = "0.1.0"
description = "Off-chain agent for PrivBatch Coordinator"
requires-python = ">=3.10"
dependencies = [
    "web3>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "eth-abi>=4.0.0",
    "eth-account>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
